# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#

Version 0.2
Released: xx/xx/2008

New:
+Added support for the following filetypes
  - haXe (Classes, Class Methods, Class Variables, Functions)
  - MatLab (Functions)
  - Octave (Functions)
  - Scheme (Functions)
  - System Verilog (Classes, Tasks)
  - Verilog (Tasks)

Bug Fixes:
+Notebook syncronization on session load
+Inaccurate parsing of php classes
+Missidentifying statements inside of strings as code in python parser
+Flashing when updating tree on Windows

#-----------------------------------------------------------------------------#

Version 0.1
Released: 03/14/2008

- Initial Release
  + Support for generating browsing trees for elements of the following languages
    - Ada (Procedure Definitions)
    - Cascading Style Sheets (Global Classes, Global Identities)
    - Configuration Files (ini) (sections, keys)
    - Dos Batch Scripts (Labels)
    - Editra Style Sheets (Style Tags Definitions)
    - Fortran (Programs, Subroutines, Functions)
    - Inno Setup Scripts (Sections, Procedures, Functions, Defines)
    - Lisp (Function Definitions)
    - Lua (Function Definitions)
    - Nullsoft Installer Scripts (Defines, Functions, Sections)
    - Perl (Packages, Subroutine Declarations, Subroutine Definitions)
    - Php (Classes, Class Variables, Class Methods, Functions)
    - Python (Classes, Class/Global Variables, Function Definitions)
    - Shell Scripts (Function Definitions)
    - Tcl/Tk (Procedure Definitions)
  + Instant navigation to an items definition by double clicking on it
  + Tree organized alphabetically by type and scope of object