@@ -84,6 +84,45 @@ def GetBrickBitmap():
     return BitmapFromImage(img)
 
 #----------------------------------------------------------------------
+def BrickBricksData():
+    return zlib.decompress(
+'x\xda\x01\x07\x03\xf8\xfc\x89PNG\r\n\x1a\n\x00\x00\x00\rIHDR\x00\x00\x00\
+\x10\x00\x00\x00\x10\x08\x06\x00\x00\x00\x1f\xf3\xffa\x00\x00\x00\x04sBIT\
+\x08\x08\x08\x08|\x08d\x88\x00\x00\x02\xbeIDAT8\x8d\x95\x93\xcfk\x1ce\x18\
+\xc7?\xfb\xce\xcc\xfe*\x9b\xd9qqC\xba\x9b\x8a\xc5t+\x12\x05\xd1\x83\x97\xe0%\
+\x14\xf5\x18<(RD4\x18\x0f\n\x1e\xfb\x07\xf4\xdeS!\x07\x0bA\xe2.\xc9\x8a\xe0%\
+XCk\xb0\xc2\xde2$KH7\x89\xd3\x86m\x1b\xedfv\xba\x9dd\x99w\xe7}=uiCA\xfa9><\
+\xcf\xf3}~&x\x0ekkk\x97\xbb\xdd\xeeE\xdf\xf7O\x038\x8es/\x9f\xcf/LMM]z\x9e\
+\xff3\xd4\xeb\xf5b\xadV\x8b\xf4\tj\xb5Z\xb4\xb8\xb8x\xfa\xa4\x7f\xe2\x89b\
+\x10\x04\x9f\xf8\xbe\x7f\x06\x10\xb6m311A\xa5RAk\xcd\xd6\xd6\x16{{{\x04A\x00\
+\xa0\x1c\xc7\xb9k\xdb\xf6O\xc3\x8a\xaa\xd5j\xffi5\xcf\xf3\xf4\xf2\xf2\xb2v]W\
+\xbb\xae\xab\x97\x96\x96\xb4\xe7y\xcfTT\xadV\xfb\x00F\xbd^\xbff\x9a\xe6;Zk\n\
+\x85\x02Zk\xb6\xb7\xb7\x19\x0c\x06x\x9e\xc7\xc1\xc1\x01###\xc4q\xcc\xd8\xd8\
+\x18J)\x9a\xcd&A\x10\x98\xd3\xd3\xd3\x15S)\xf5\xd9\xe4\xe4$a\x18\xe2\xba.\
+\x86a\xd0n\xb7\x99\x99\x9999\x1b\xb2\xd9,RJ\xc20$\x9f\xcf\xd3\xe9t>\x16@X*\
+\x95(\x97\xcb\xd8\xb6M.\x97\xa3X,\xd2j\xb5PJ\xa1\x94\xa2\xd5j1::J2\x99\xc4\
+\xf7}\xa2(\xc2q\x1c\xb4\xd6\xa1\xa9\xb5\x06 \x9dNcY\x16\xbd^\x0f\xcb\xb2\x08\
+\x82\x80\xcd\xcdM\x00\xa4\x94\x1c\x1e\x1e\xd2\xef\xf7\xb1,\x0b\x00\xad5ZkL\
+\xa5\xd4\xd0\xa0\x94"\x93\xc90>>\xce\xd1\xd1\x11\xb2\xdbE\xdf\\\xa5x\xbbEI\
+\xc5t\xce\xbf\x8e\xff\xe6[\xc4\xe9\x0cq\x1c\xa3\x94B\xc4q\x9c\x11B \x84@JI\
+\x14EH)9\x96\x92\x07+?\xf2\xaaH!RIDn\x84\xf1n\x8f\xcc_\x7f\x0c[SJ\xa5\x05\
+\xb0\xd6h4\x08\x82\x80l6\x8ba\x18\\\xbdq\x85\xdf\xee\xff\xc2\xc3\xc7\xf7H\
+\x9d;\x8f\xf5R\x01\x15\xf8\xf4\x1f\xecs*\x93E\x08\xc1\xee\xee.J\xa9\x86\xb0,\
+\xeb\xa3\xfd\xfd\xfd\xd9\xd5\xd5\xd5\x9d\xf5\xf5u\x12\x89\x04\x7f\x1f\xef\
+\xf0v\xf9]\xc2\xcaY\xfc_\x97I\xdayL9`\xf0\xe8_~\x8f_fcc\xe3N\xa7\xd3\xf96\
+\x99L~\x90x\xb2\xa6\x85\x85\x85\xa2\x94\xf2;\xad\xf577\xe5J\xfe\x8b\xf7\xbf\
+\xc2?\xee\xf0\xf3\xad;|\x1e\x98\xfc\xf3X\xd2x\xe5=NeS\x9c9r\xcbsss\xed\xe1)?\
+\xcd\xfc\xfc\xfc\x1b\xc0\xa5\xdd\xa8\xf5i\xae\x9cb\xe3v\x9a\xaf?\xfc\x92\x9d\
+\xf6C\xfe\\\xbf\x8ba\x19\xfc\xf0\xfd\x85a\x9c8\x99`vv\xb6y=\x7f\xfd\xe2Y\xeb\
+\xb5\x0b\x85\xfb\xa5\x1b\x15]\xdc\\\xb9\xd5$\x01:F\xd0\xf3\x1f\xfd\xefC\xbe\
+\x10\xff\x01\xf9\xfd\x88\xf0=\xc9e\x8e\x00\x00\x00\x00IEND\xaeB`\x82\xb1ewV'\
+ )
+
+def GetBrickBricksBitmap():
+    img = ImageFromStream(cStringIO.StringIO(BrickBricksData()))
+    return BitmapFromImage(img)
+
+#----------------------------------------------------------------------
 # Green Arrow
 def BrickGoData():
     return zlib.decompress(
