@@ -39,6 +39,7 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_ESS : TAGLIB + 'esstags',
              synglob.ID_LANG_F77 : TAGLIB + 'fortrantags',
              synglob.ID_LANG_F95 : TAGLIB + 'fortrantags',
+             synglob.ID_LANG_FERITE : TAGLIB + 'feritetags',
              synglob.ID_LANG_HAXE : TAGLIB + 'haxetags',
              synglob.ID_LANG_INNO : TAGLIB + 'innotags',
              synglob.ID_LANG_KSH : TAGLIB + 'shtags',
