@@ -9,6 +9,7 @@ Released: xx/xx/2008
 
 New:
 +Added support for the following filetypes
+  - Ferite (Namespaces, Classes, Functions, Protocols)
   - haXe (Classes, Class Methods, Class Variables, Functions)
   - MatLab (Functions)
   - Octave (Functions)
